@@ -1,2 +1,3 @@
 *.pyc
 *~
+cse491.env/
